Fix overflow

--- a/src/less/popup.less
+++ b/src/less/popup.less
@@ -33,7 +33,7 @@
     box-shadow: 0 0 5px 0 rgba(75, 75, 75, 0.4);
 
     background: #fff;
-    overflow: auto;
+    overflow-x: hidden;
 
     transition: all .2s ease;
 
